--- a/Appt/Base.lproj/Main.storyboard
+++ b/Appt/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="Odh-Va-Vmz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
                             <tableViewSection id="GOI-93-YHM">
                                 <cells>
@@ -235,7 +235,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="319.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bla-Rk-0MO" customClass="CardView" customModule="Appt" customModuleProvider="target">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bla-Rk-0MO">
                                                     <rect key="frame" x="12" y="4" width="351" height="303.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month + Year" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RO5-hu-z3S">
@@ -381,7 +381,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="Bla-Rk-0MO" secondAttribute="bottom" constant="12" id="Mbn-Wf-0l7"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -527,7 +527,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwf-MQ-FOz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3554.4000000000001" y="-1173.4632683658172"/>
+            <point key="canvasLocation" x="3538" y="-1224"/>
         </scene>
         <!--Custom Tab Bar-->
         <scene sceneID="yl2-sM-qoP">
@@ -914,7 +914,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="k9m-mm-fAV" userLabel="Calendar stack">
-                                                    <rect key="frame" x="0.0" y="-5602.5" width="375" height="6052"/>
+                                                    <rect key="frame" x="0.0" y="-5904.5" width="375" height="6354"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="sjg-Sc-qeP" userLabel="Title Stack View">
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
@@ -991,7 +991,7 @@
                                                             </constraints>
                                                         </stackView>
                                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="SO9-34-Uii" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
-                                                            <rect key="frame" x="0.0" y="85.5" width="375" height="5966.5"/>
+                                                            <rect key="frame" x="0.0" y="85.5" width="375" height="6268.5"/>
                                                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="340" id="z7B-lk-4Wh"/>
@@ -1267,48 +1267,55 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iWK-MX-qf5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Jja-bE-9g6">
-                            <size key="itemSize" width="112" height="70"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Jja-bE-9g6">
+                            <size key="itemSize" width="120" height="52"/>
+                            <size key="headerReferenceSize" width="0.0" height="12"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="12" minY="0.0" maxX="12" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TimeSlotCell" id="6cK-RT-iuZ" customClass="TimeSlotCell" customModule="Appt" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
+                                <rect key="frame" x="12" y="12" width="120" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="120" height="52"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="get-Ki-5wO">
-                                            <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="get-Ki-5wO" customClass="CardView" customModule="Appt" customModuleProvider="target">
+                                            <rect key="frame" x="4" y="0.0" width="112" height="40"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrm-cF-1w8">
+                                                    <rect key="frame" x="34" y="10" width="43.5" height="19.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.31372549019607843" green="0.31372549019607843" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="yrm-cF-1w8" firstAttribute="centerX" secondItem="get-Ki-5wO" secondAttribute="centerX" id="hs1-tn-wxQ"/>
+                                                <constraint firstItem="yrm-cF-1w8" firstAttribute="centerY" secondItem="get-Ki-5wO" secondAttribute="centerY" id="rMd-Qz-2kF"/>
+                                            </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrm-cF-1w8">
-                                            <rect key="frame" x="8.5" y="10.5" width="43.5" height="19.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="yrm-cF-1w8" firstAttribute="centerY" secondItem="6cK-RT-iuZ" secondAttribute="centerY" id="EmJ-Ug-VwI"/>
-                                    <constraint firstItem="yrm-cF-1w8" firstAttribute="centerX" secondItem="6cK-RT-iuZ" secondAttribute="centerX" id="LJ2-ja-CBg"/>
-                                    <constraint firstItem="get-Ki-5wO" firstAttribute="height" secondItem="6cK-RT-iuZ" secondAttribute="height" id="bu8-vw-wad"/>
-                                    <constraint firstItem="get-Ki-5wO" firstAttribute="width" secondItem="6cK-RT-iuZ" secondAttribute="width" id="cJy-5j-x0Q"/>
-                                    <constraint firstItem="get-Ki-5wO" firstAttribute="centerX" secondItem="6cK-RT-iuZ" secondAttribute="centerX" id="jsd-60-5we"/>
-                                    <constraint firstItem="get-Ki-5wO" firstAttribute="centerY" secondItem="6cK-RT-iuZ" secondAttribute="centerY" id="ljP-I7-xN4"/>
+                                    <constraint firstAttribute="trailing" secondItem="get-Ki-5wO" secondAttribute="trailing" constant="4" id="EPl-SI-8c6"/>
+                                    <constraint firstAttribute="bottom" secondItem="get-Ki-5wO" secondAttribute="bottom" constant="12" id="QZJ-Xu-ivb"/>
+                                    <constraint firstItem="get-Ki-5wO" firstAttribute="top" secondItem="6cK-RT-iuZ" secondAttribute="top" id="Rqn-ia-0Tn"/>
+                                    <constraint firstItem="get-Ki-5wO" firstAttribute="leading" secondItem="6cK-RT-iuZ" secondAttribute="leading" constant="4" id="i0T-b8-gFv"/>
                                 </constraints>
-                                <size key="customSize" width="60" height="40"/>
                                 <connections>
                                     <outlet property="timeLabel" destination="yrm-cF-1w8" id="JIA-V0-8xO"/>
                                     <outlet property="timeSlotView" destination="get-Ki-5wO" id="4Lb-yh-Cox"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="EMt-bz-NKO">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="12"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="qKJ-D7-gKV" id="HS0-uJ-gN5"/>
                             <outlet property="delegate" destination="qKJ-D7-gKV" id="fbp-uA-epz"/>
@@ -1763,7 +1770,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="vH7-U6-gh3"/>
-        <segue reference="TJR-rU-u6g"/>
-        <segue reference="XoE-ck-qRf"/>
+        <segue reference="DkU-Xe-fvp"/>
+        <segue reference="Ity-bc-bUT"/>
     </inferredMetricsTieBreakers>
 </document>
